--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
         <div class="topnav">
             <div class="dropdown">
-                <a href="#" class="dropbtn">KATEGORIJE</a>
+                <button class="dropbtn">KATEGORIJE
+                    <i class="fa fa-caret-down"></i>
+                  </button>
                 <div class="dropdown-content">
                     <a href="#">Rođendani</a>
                     <a href="#">Venčanja</a>
@@ -46,7 +48,7 @@
             <h2>Najtraženiji proizvodi</h2>
             <div id="product-cards-container"></div>
           </div>
-          <button onclick="updateProductCards()">Update Product Cards</button>
+
 </body>
 
 </html>
